# ru-openai

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
examples/: create_chat_completion.rs  create_chat_completion_stream.rs  create_completion.rs  create_completion_stream.rs  create_image.rs
misc/: test_audio.m4a
src/: api.rs  configuration.rs  lib.rs
